<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.tulupov.alex.pluggedin.activities.SearchResultsActivity"
    tools:showIn="@layout/activity_search_results">

    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/recycleViewSearch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_nothing"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:id="@+id/search_empty"
        android:visibility="gone"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />

</RelativeLayout>