<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.tulupov.alex.pluggedin.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/tryAgain"
        style="@style/buttonTryAgain"
        android:visibility="gone"
        android:id="@+id/buttonTryAgain"
        />
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refreshRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.shppandroid1.app.MainActivity">

        <android.support.v7.widget.RecyclerView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/recycleView" />
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>